fix inputparameterresolver