@@ -2,20 +2,32 @@ package org.opencds.cqf.fhir.cr.common;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doReturn;
 import static org.opencds.cqf.fhir.utility.Parameters.newPart;
 import static org.opencds.cqf.fhir.utility.Parameters.newStringPart;
 
 import ca.uhn.fhir.context.FhirContext;
 import java.util.Arrays;
+import java.util.List;
 import org.hl7.fhir.instance.model.api.IBaseBackboneElement;
 import org.hl7.fhir.instance.model.api.IBaseExtension;
+import org.hl7.fhir.r4.model.Bundle;
+import org.hl7.fhir.r4.model.Bundle.BundleEntryComponent;
 import org.hl7.fhir.r4.model.CodeType;
+import org.hl7.fhir.r4.model.CodeableConcept;
 import org.hl7.fhir.r4.model.Coding;
+import org.hl7.fhir.r4.model.DataRequirement;
+import org.hl7.fhir.r4.model.DataRequirement.DataRequirementCodeFilterComponent;
 import org.hl7.fhir.r4.model.Extension;
+import org.hl7.fhir.r4.model.Observation;
 import org.hl7.fhir.r4.model.Parameters;
 import org.hl7.fhir.r4.model.Patient;
 import org.hl7.fhir.r4.model.PractitionerRole;
+import org.hl7.fhir.r4.model.ValueSet;
+import org.hl7.fhir.r4.model.ValueSet.ValueSetExpansionComponent;
+import org.hl7.fhir.r4.model.ValueSet.ValueSetExpansionContainsComponent;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
@@ -61,7 +73,6 @@ class InputParametersTest {
                 Ids.newId(fhirContextDstu3, "Encounter", encounterId),
                 practitioner.getIdElement(),
                 null,
-                true,
                 null,
                 // SDC Launch Context is not supported in Dstu3
                 null,
@@ -101,7 +112,6 @@ class InputParametersTest {
                 null,
                 null,
                 null,
-                true,
                 null,
                 Arrays.asList(
                         adapterFactoryR4.createParametersParameter((IBaseBackboneElement) newPart(
@@ -204,14 +214,13 @@ class InputParametersTest {
                 null,
                 null,
                 null,
-                true,
                 null,
-                Arrays.asList(adapterFactoryR4.createParametersParameter((IBaseBackboneElement) newPart(
+                List.of(adapterFactoryR4.createParametersParameter((IBaseBackboneElement) newPart(
                         fhirContextR4,
                         "context",
                         newStringPart(fhirContextR4, "name", "user"),
                         newPart(fhirContextR4, "Reference", "content", user.getId())))),
-                Arrays.asList((IBaseExtension<?, ?>) new Extension(Constants.SDC_QUESTIONNAIRE_LAUNCH_CONTEXT)
+                List.of((IBaseExtension<?, ?>) new Extension(Constants.SDC_QUESTIONNAIRE_LAUNCH_CONTEXT)
                         .setExtension(Arrays.asList(
                                 new Extension("name", new Coding().setCode("user")),
                                 new Extension("type", new CodeType("Patient"))))));
@@ -237,14 +246,13 @@ class InputParametersTest {
                 null,
                 null,
                 null,
-                true,
                 null,
-                Arrays.asList(adapterFactoryR4.createParametersParameter((IBaseBackboneElement) newPart(
+                List.of(adapterFactoryR4.createParametersParameter((IBaseBackboneElement) newPart(
                         fhirContextR4,
                         "context",
                         newStringPart(fhirContextR4, "name", "user"),
                         newPart(fhirContextR4, "Reference", "content", user.getId())))),
-                Arrays.asList((IBaseExtension<?, ?>) new Extension(Constants.SDC_QUESTIONNAIRE_LAUNCH_CONTEXT)
+                List.of((IBaseExtension<?, ?>) new Extension(Constants.SDC_QUESTIONNAIRE_LAUNCH_CONTEXT)
                         .setExtension(Arrays.asList(
                                 new Extension("name", new Coding().setCode("user")),
                                 new Extension("type", new CodeType("PractitionerRole"))))));
@@ -270,14 +278,13 @@ class InputParametersTest {
                 null,
                 null,
                 null,
-                true,
                 null,
-                Arrays.asList(adapterFactoryR4.createParametersParameter((IBaseBackboneElement) newPart(
+                List.of(adapterFactoryR4.createParametersParameter((IBaseBackboneElement) newPart(
                         fhirContextR4,
                         "context",
                         newStringPart(fhirContextR4, "name", "user"),
                         newPart(fhirContextR4, "Reference", "content", user.getId())))),
-                Arrays.asList((IBaseExtension<?, ?>)
+                List.of((IBaseExtension<?, ?>)
                         new org.hl7.fhir.r4.model.Extension(Constants.SDC_QUESTIONNAIRE_LAUNCH_CONTEXT)
                                 .setExtension(Arrays.asList(
                                         new org.hl7.fhir.r4.model.Extension(
@@ -320,9 +327,8 @@ class InputParametersTest {
                 null,
                 null,
                 null,
-                true,
                 null,
-                Arrays.asList(
+                List.of(
                         adapterFactoryR5.createParametersParameter((IBaseBackboneElement) newPart(
                                 fhirContextR5,
                                 "context",
@@ -348,7 +354,7 @@ class InputParametersTest {
                                 "context",
                                 newStringPart(fhirContextR5, "name", "study"),
                                 newPart(fhirContextR5, "Reference", "content", study.getId())))),
-                Arrays.asList(
+                List.of(
                         (IBaseExtension<?, ?>)
                                 new org.hl7.fhir.r5.model.Extension(Constants.SDC_QUESTIONNAIRE_LAUNCH_CONTEXT)
                                         .setExtension(Arrays.asList(
@@ -423,14 +429,13 @@ class InputParametersTest {
                 null,
                 null,
                 null,
-                true,
                 null,
-                Arrays.asList(adapterFactoryR5.createParametersParameter((IBaseBackboneElement) newPart(
+                List.of(adapterFactoryR5.createParametersParameter((IBaseBackboneElement) newPart(
                         fhirContextR5,
                         "context",
                         newStringPart(fhirContextR5, "name", "user"),
                         newPart(fhirContextR5, "Reference", "content", user.getId())))),
-                Arrays.asList((IBaseExtension<?, ?>)
+                List.of((IBaseExtension<?, ?>)
                         new org.hl7.fhir.r5.model.Extension(Constants.SDC_QUESTIONNAIRE_LAUNCH_CONTEXT)
                                 .setExtension(Arrays.asList(
                                         new org.hl7.fhir.r5.model.Extension(
@@ -459,14 +464,13 @@ class InputParametersTest {
                 null,
                 null,
                 null,
-                true,
                 null,
-                Arrays.asList(adapterFactoryR5.createParametersParameter((IBaseBackboneElement) newPart(
+                List.of(adapterFactoryR5.createParametersParameter((IBaseBackboneElement) newPart(
                         fhirContextR5,
                         "context",
                         newStringPart(fhirContextR5, "name", "user"),
                         newPart(fhirContextR5, "Reference", "content", user.getId())))),
-                Arrays.asList((IBaseExtension<?, ?>)
+                List.of((IBaseExtension<?, ?>)
                         new org.hl7.fhir.r5.model.Extension(Constants.SDC_QUESTIONNAIRE_LAUNCH_CONTEXT)
                                 .setExtension(Arrays.asList(
                                         new org.hl7.fhir.r5.model.Extension(
@@ -495,14 +499,13 @@ class InputParametersTest {
                 null,
                 null,
                 null,
-                true,
                 null,
-                Arrays.asList(adapterFactoryR5.createParametersParameter((IBaseBackboneElement) newPart(
+                List.of(adapterFactoryR5.createParametersParameter((IBaseBackboneElement) newPart(
                         fhirContextR5,
                         "context",
                         newStringPart(fhirContextR5, "name", "user"),
                         newPart(fhirContextR5, "Reference", "content", user.getId())))),
-                Arrays.asList((IBaseExtension<?, ?>)
+                List.of((IBaseExtension<?, ?>)
                         new org.hl7.fhir.r5.model.Extension(Constants.SDC_QUESTIONNAIRE_LAUNCH_CONTEXT)
                                 .setExtension(Arrays.asList(
                                         new org.hl7.fhir.r5.model.Extension(
@@ -517,5 +520,39 @@ class InputParametersTest {
         assertEquals(user, actual.getParameter().get(1).getResource());
         assertEquals("User", actual.getParameter().get(2).getName());
         assertEquals(user, actual.getParameter().get(2).getResource());
+    }
+
+    @Test
+    void testResolveInputParametersWithDataRequirements() {
+        var patient = new org.hl7.fhir.r4.model.Patient();
+        patient.setIdElement(Ids.newId(fhirContextR4, "Patient", patientId));
+        var valueSetUrl = "ValueSet/testValueSet";
+        var valueSet = new ValueSet()
+                .setUrl(valueSetUrl)
+                .setExpansion(new ValueSetExpansionComponent()
+                        .addContains(new ValueSetExpansionContainsComponent()
+                                .setCode("testCode")
+                                .setSystem("testSystem")));
+        var valueSetBundle = new Bundle().addEntry(new BundleEntryComponent().setResource(valueSet));
+        var obs = new Observation()
+                .setCode(new CodeableConcept()
+                        .addCoding(new Coding().setCode("testCode").setSystem("testSystem")));
+        var obsBundle = new Bundle().addEntry(new BundleEntryComponent().setResource(obs));
+        doReturn(fhirContextR4).when(repository).fhirContext();
+        doReturn(patient).when(repository).read(org.hl7.fhir.r4.model.Patient.class, patient.getIdElement());
+        doReturn(valueSetBundle).when(repository).search(eq(Bundle.class), eq(ValueSet.class), any());
+        doReturn(obsBundle).when(repository).search(eq(Bundle.class), eq(Observation.class), any(), any());
+        var resolver = IInputParameterResolver.createResolver(
+                repository, patient.getIdElement(), null, null, null, null, null, null);
+        var inputReq = new DataRequirement()
+                .setType("Observation")
+                .addCodeFilter(
+                        new DataRequirementCodeFilterComponent().setPath("code").setValueSet(valueSetUrl));
+        inputReq.setId("test");
+        var actual = (Parameters) resolver.resolveInputParameters(List.of(inputReq));
+        assertNotNull(actual);
+        var parameter = actual.getParameter("%" + inputReq.getId());
+        assertNotNull(parameter);
+        assertEquals(obs, parameter.getResource());
     }
 }
